--- a/index.html
+++ b/index.html
@@ -12,3 +12,4 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+<script charset="utf-8" src="https://map.qq.com/api/gljs?v=1.exp&key=IOHBZ-EV2R3-4BU3N-YEQN7-AQMYF-7XFF4"></script>
